// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExtendedReminder renders correctly with custom link 1`] = `
<DocumentFragment>
  .cache-ohp1vx {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #FFEFE6;
}

.cache-gmk9s9 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1xcr4bu {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #FF8C69;
  color: #ffffff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  font-weight: 500;
}

.cache-1iuna2e {
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1iuna2e.cache-1iuna2e {
  vertical-align: middle;
  margin-right: 4px;
}

.cache-nek4pw {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #FF8C69;
}

.cache-nek4pw.cache-nek4pw {
  margin-bottom: 8px;
}

.cache-1c7itzr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1c7itzr.cache-1c7itzr {
  margin-bottom: 8px;
}

<div
    class="edgwu7l4 cache-ohp1vx"
  >
    <div
      class="cache-gmk9s9 edgwu7l3"
    >
      <strong
        aria-label="beta"
        class="edgwu7l1 egvl2gp0 cache-1xcr4bu"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="sc-ui-icon etwatq50 cache-1iuna2e"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </strong>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-nek4pw"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1c7itzr"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <div>
      Custom Link
    </div>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-2rd8j4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #E1EBFF;
}

.cache-gmk9s9 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1il1st3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #3F6ED8;
  color: #ffffff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  font-weight: 500;
}

.cache-1iuna2e {
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1iuna2e.cache-1iuna2e {
  vertical-align: middle;
  margin-right: 4px;
}

.cache-pk5q1l {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #3F6ED8;
}

.cache-pk5q1l.cache-pk5q1l {
  margin-bottom: 8px;
}

.cache-1c7itzr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1c7itzr.cache-1c7itzr {
  margin-bottom: 8px;
}

.cache-b4nn5g {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #ffffff;
  color: #3F6ED8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.cache-b4nn5g:hover,
.cache-b4nn5g:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-b4nn5g:hover,
.cache-b4nn5g:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="edgwu7l4 cache-2rd8j4"
  >
    <div
      class="cache-gmk9s9 edgwu7l3"
    >
      <strong
        aria-label="info"
        class="edgwu7l1 egvl2gp0 cache-1il1st3"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="sc-ui-icon etwatq50 cache-1iuna2e"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </strong>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-pk5q1l"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1c7itzr"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
      class="edgwu7l0 em6gco80 cache-b4nn5g"
      href="/"
    >
      <div
        class="cache-i7e9al em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-una6lk"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
        class="cache-115wth8 em6gco81"
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly with variant 1`] = `
<DocumentFragment>
  .cache-ohp1vx {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #FFEFE6;
}

.cache-gmk9s9 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1xcr4bu {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #FF8C69;
  color: #ffffff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  font-weight: 500;
}

.cache-1iuna2e {
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1iuna2e.cache-1iuna2e {
  vertical-align: middle;
  margin-right: 4px;
}

.cache-nek4pw {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #FF8C69;
}

.cache-nek4pw.cache-nek4pw {
  margin-bottom: 8px;
}

.cache-1c7itzr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1c7itzr.cache-1c7itzr {
  margin-bottom: 8px;
}

.cache-b4nn5g {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 4px;
  border-width: 0;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  outline: none;
  vertical-align: middle;
  white-space: nowrap;
  font-weight: 500;
  -webkit-transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  transition: color 150ms ease-in-out,background-color 150ms ease-in-out,border-color 150ms ease-in-out;
  background-color: #ffffff;
  color: #3F6ED8;
  vertical-align: baseline;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  padding: 8px;
  margin-top: auto;
  color: #3f6ed8;
  background-color: transparent;
  padding: 0;
  width: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
}

.cache-b4nn5g:hover,
.cache-b4nn5g:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-b4nn5g:hover,
.cache-b4nn5g:focus {
  color: #1e4293;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-i7e9al {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  pointer-events: none;
}

.cache-una6lk {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-una6lk.cache-una6lk {
  vertical-align: middle;
}

.cache-115wth8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  pointer-events: none;
}

<div
    class="edgwu7l4 cache-ohp1vx"
  >
    <div
      class="cache-gmk9s9 edgwu7l3"
    >
      <strong
        aria-label="beta"
        class="edgwu7l1 egvl2gp0 cache-1xcr4bu"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="sc-ui-icon etwatq50 cache-1iuna2e"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </strong>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-nek4pw"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1c7itzr"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
    <a
      aria-disabled="false"
      class="edgwu7l0 em6gco80 cache-b4nn5g"
      href="/"
    >
      <div
        class="cache-i7e9al em6gco82"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-una6lk"
          viewBox="0 0 24 24"
        >
          <path
            d="M15 5l-1.41 1.41L18.17 11H2v2h16.17l-4.59 4.59L15 19l7-7-7-7z"
          />
        </svg>
      </div>
      <div
        class="cache-115wth8 em6gco81"
      >
        Verify my credit card
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ExtendedReminder renders correctly without link 1`] = `
<DocumentFragment>
  .cache-ohp1vx {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-radius: 4px;
  position: relative;
  padding: 16px;
  background-color: #FFEFE6;
}

.cache-gmk9s9 {
  position: absolute;
  top: -12px;
  left: 16px;
  font-weight: 500;
  text-transform: uppercase;
}

.cache-1xcr4bu {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #FF8C69;
  color: #ffffff;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
  font-weight: 500;
}

.cache-1iuna2e {
  fill: #fff;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1iuna2e.cache-1iuna2e {
  vertical-align: middle;
  margin-right: 4px;
}

.cache-nek4pw {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 22px;
  font-weight: 600;
  font-style: unset;
  text-transform: uppercase;
  color: #FF8C69;
}

.cache-nek4pw.cache-nek4pw {
  margin-bottom: 8px;
}

.cache-1c7itzr {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 14px;
  line-height: 20px;
}

.cache-1c7itzr.cache-1c7itzr {
  margin-bottom: 8px;
}

<div
    class="edgwu7l4 cache-ohp1vx"
  >
    <div
      class="cache-gmk9s9 edgwu7l3"
    >
      <strong
        aria-label="beta"
        class="edgwu7l1 egvl2gp0 cache-1xcr4bu"
        role="status"
      >
        <svg
          aria-hidden="true"
          class="sc-ui-icon etwatq50 cache-1iuna2e"
          viewBox="0 0 24 24"
        >
          <path
            d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
          />
        </svg>
        10 days remaining
      </strong>
    </div>
    <em
      class="edgwu7l2 e1g1zfwd0 cache-nek4pw"
    >
      Verify your credit card
    </em>
    <p
      class="e1g1zfwd0 cache-1c7itzr"
    >
      Enter the code we send to your bank account to validate your payment method.
    </p>
  </div>
</DocumentFragment>
`;
